check code and create user and send token
